@startuml

class AddCustomerUI {}

class AddCustomerController {
customerList : CustomerList
addCustomer(designation)
}

'class Services {
'customerList : CustomerList
'customerList : CustomerList
'addACustomer(name)
'}

class CustomerList {
customerList : List<Customer>
validateDesignation(designation)
create(newCustomer)
save(newCustomer)




}

'class CustomerDTO {
'name : String
'}

class Customer {
name : String
}

AddCustomerUI "     1" o-- "        1" AddCustomerController
AddCustomerController "     1" o-- "        1" CustomerList
CustomerList "  1" *-- "   *" Customer
'CustomerList ..> CustomerDTO
'CustomerDTO..>Customer

@enduml